# book-analyzer

./: .gitignore  .gitmodules  ActionPlan.md  Makefile.am  README.md  autogen.sh  configure.ac
src/: book-analyzer.cc
src/analyzer/: analyzer.h
src/commands/: command-controller.h  command.h
src/data/: data-handler.h
src/logger/: log.cc  log.h
src/models/: order.h  side-order.h  side.h
src/readers/: input-reader.h
src/serializers/: action-details.h  order-details.h  serializer.h
src/util/: utility.h
src/validators/: input-validator.cc  input-validator.h
src/viewers/: viewer.h
testdata/: out.200
tst/: mock.h  serializer.cc  validators.cc
